--- a/package.json
+++ b/package.json
@@ -11,16 +11,16 @@
     "test": "jest --watch --coverage --config=configs/jest.json"
   },
   "devDependencies": {
+    "@babel/cli": "^7.2.0",
+    "@babel/core": "^7.2.0",
+    "@babel/preset-env": "^7.2.0",
+    "@babel/preset-react": "^7.0.0",
     "@types/jest": "^23.3.1",
     "@types/node": "^10.7.1",
     "@types/react": "^16.4.11",
     "@types/react-dom": "^16.0.7",
-    "babel-cli": "^6.26.0",
-    "babel-core": "^6.26.3",
-    "babel-loader": "^7.1.5",
+    "babel-loader": "^8.0.4",
     "babel-plugin-emotion": "^9.2.6",
-    "babel-preset-env": "^1.7.0",
-    "babel-preset-react": "^6.24.1",
     "express": "^4.16.3",
     "file-loader": "^2.0.0",
     "html-webpack-plugin": "^3.2.0",
@@ -41,7 +41,6 @@
   },
   "dependencies": {
     "emotion": "^9.2.6",
-    "react-addons-test-utils": "^15.6.2",
     "react-emotion": "^9.2.6",
     "ts-loader": "^4.5.0"
   }
