--- a/package.json
+++ b/package.json
@@ -17,8 +17,8 @@
     "@babel/preset-react": "^7.0.0",
     "@types/jest": "^23.3.1",
     "@types/node": "^10.7.1",
-    "@types/react": "^16.4.11",
-    "@types/react-dom": "^16.0.7",
+    "@types/react": "^16.9.17",
+    "@types/react-dom": "^16.9.4",
     "babel-loader": "^8.0.4",
     "babel-plugin-emotion": "^9.2.6",
     "express": "^4.16.3",
@@ -27,11 +27,10 @@
     "image-webpack-loader": "^4.3.1",
     "jest": "^23.5.0",
     "node-sass": "^4.9.3",
-    "react": "^16.4.2",
-    "react-dom": "^16.4.2",
+    "prettier": "^1.19.1",
     "react-hot-loader": "^4.3.4",
     "tslint": "^5.11.0",
-    "typescript": "^3.0.1",
+    "typescript": "^3.7.4",
     "uglifyjs-webpack-plugin": "^1.3.0",
     "webpack": "^4.17.1",
     "webpack-cli": "^3.1.0",
@@ -40,8 +39,10 @@
     "webpack-merge": "^4.1.4"
   },
   "dependencies": {
-    "emotion": "^9.2.6",
-    "react-emotion": "^9.2.6",
+    "@emotion/core": "^10.0.27",
+    "@emotion/styled": "^10.0.27",
+    "react": "^16.12.0",
+    "react-dom": "^16.12.0",
     "ts-loader": "^4.5.0"
   }
 }
